FIX: gap over section with scrollbar in chat page

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -163,6 +163,7 @@
   padding-right: 16px;
   max-height: 100%;
   bottom: 0;
+  padding-top: 3px;
 
   @include media-breakpoint-down($desktop-breakpoint-dcrs) {
     overflow-y: auto;
